unpackaged/main/default/objects/ccpe_r__Skill_Rate__c/ccpe_r__Skill_Rate__c.object-meta.xml
<CustomObject>
    <description>Allows different rates for different skills to be set up for each account and rate card</description>
    <label>Skill Rate</label>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Skill Rate Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>