unpackaged/main/default/objects/ccpe_r__Skill_Rate__c/fields/ccpe_r__Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Rate_Card__c</fullName>
    <label>Rate Card</label>
    <referenceTo>ccpe_r__Rate_Card__c</referenceTo>
    <relationshipLabel>Skill Rates</relationshipLabel>
    <relationshipName>Skill_Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>