unpackaged/main/default/objects/ccpe_r__Skill_Rate__c/fields/ccpe_r__Work_Type__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Work_Type__c</fullName>
    <label>Work Type</label>
    <referenceTo>project_cloud__Work_Type__c</referenceTo>
    <relationshipLabel>Skill Rates</relationshipLabel>
    <relationshipName>Skill_Rates</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>